# betterdisplay-input-switcher

./: .gitignore  Cargo.toml  README.md  betterdisplay-kvm-09-22-25.excalidraw  config.toml  install.sh  main.rs  package.json  pnpm-lock.yaml  uninstall.sh
.github/workflows/: ci.yaml
config/: com.github.hacksore.betterdisplay-kvm.plist
contrib/launch/: com.github.hacksore.betterdisplay-kvm.plist
embeded/: sketch.ino
hostapp/: Cargo.toml
hostapp/src/: main.rs
scripts/: build-installer.sh  build-pkg.sh  build-uninstaller.sh  install-launch-agent.sh
src/: app.rs  device_manager.rs  main.rs  utils.rs
