[package]
name = "betterdisplay-input-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4"
core-foundation = "0.9"
core-foundation-sys = "0.8"
env_logger = "0.11.8"
futures-lite = "2.0"
log = "0.4.27"
nusb = "0.2.0"

[[bin]]
name = "betterdisplay-input-switcher"
path = "main.rs"
